--- a/openApiProject/css/index.css
+++ b/openApiProject/css/index.css
@@ -1,3 +1,131 @@
 body {
-    background-color: rgb(228, 199, 136);
+    background-image: url('https://wallpapercave.com/wp/wp10110826.png'); 
+    background-size: cover;
+    background-position: center; /* Changed from 'fixed' to 'center' */
+    margin: 0;
+}
+
+.banner {
+    width: 100%;
+    height: 500px;
+    background: #98ccc9;
+}
+
+.heading {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 100%; 
+}
+
+.heading h1 {
+    color: black;
+    font-size: 50px;
+    text-align: center; 
+    margin: 0; 
+    line-height: 1; 
+}
+
+.card {
+    width: 90%;
+    max-width: 470px;
+    background-color:#68a5ae;
+    color: #fff;
+    margin: 100px auto 0;
+    border-radius: 20px;
+    padding: 40px 35px;
+    text-align: center;
+}
+
+.search {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search input {
+    border: none; /* Fixed border property */
+    outline: none;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px;
+}
+
+.search button { 
+    border: none; /* Fixed border property */
+    outline: none;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    transition: transform 0.2s; /* Added transition effect */
+}
+
+.search button:hover {
+    transform: scale(1.1); /* Added hover effect */
+}
+
+.search button img{
+    width: 40px;
+}
+
+.weather-icon {
+    width: 200px;
+    margin-top: 30px;
+}
+
+.weather h1 {
+    font-size: 80px;
+    font-weight: 500;
+}
+
+.weather h2 {
+    font-size: 45px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+
+.details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+}
+
+.col {
+    display: flex;
+    flex-direction: column; /* Added to align items vertically */
+    align-items: center; /* Added to center items horizontally */
+    text-align: center; /* Changed from 'left' to 'center' */
+}
+
+.col img {
+    width: 150px;
+    margin-bottom: 10px; /* Changed from 'margin-right' to 'margin-bottom' */
+}
+
+.humidity, .wind {
+    font-size: 28px;
+    margin-top: -6px;
+}
+
+.weather {
+    display: none;
+}
+
+.error p {
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    color: black;
+    display: none;
 }
