--- a/openApiProject/pages/weather.css
+++ b/openApiProject/pages/weather.css
@@ -1,29 +1,8 @@
 body {
     background-image: url('https://wallpapercave.com/wp/wp10110826.png'); 
     background-size: cover;
-    background-position: center; /* Changed from 'fixed' to 'center' */
+    background-position: center;
     margin: 0;
-}
-
-.banner {
-    width: 100%;
-    height: 500px;
-    background: #98ccc9;
-}
-
-.heading {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    height: 100%; 
-}
-
-.heading h1 {
-    color: black;
-    font-size: 50px;
-    text-align: center; 
-    margin: 0; 
-    line-height: 1; 
 }
 
 .card {
@@ -39,10 +18,9 @@ body {
 
 .search{
     width: 100%; 
-    display: flex; /*Displays an element as a block-level flex container */
+    display: flex; 
     align-items: center;
-    justify-content: space-between; /* distributes space between and around content items along the main-axis of a flex container */
-}
+    justify-content: space-between;}
 
 .search input{
     border: 0;
@@ -52,7 +30,7 @@ body {
     padding: 10px 25px;
     height: 60px;
     border-radius: 30px;
-    flex: 1; /*Grow and take all available space within container */
+    flex: 1; 
     margin-right: 16px;
     font-size: 18px;
 }
@@ -68,7 +46,7 @@ body {
 }
 
 .search button img{
-    width:16px;
+    width: 45px;
 }
 
 .weather-icon{
@@ -88,10 +66,10 @@ body {
 }
 
 .details{
-    display: flex; /*to create 2 column */
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 ; /*20px for left and right */
+    padding: 0 ;
     margin-top: 50px;
 }
 
